[project]
name = "disentanglement-error"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook>=7.4.5",
    "numpy>=1.26.4",
    "scikit-learn>=1.7.1",
    "tensorflow==2.15",
]

[dependency-groups]
dev = [
    "keras>=2.15.0",
    "keras-uncertainty",
    "pandas>=2.3.1",
    "tensorflow==2.15",
]

[tool.uv.sources]
keras-uncertainty = { git = "https://github.com/mvaldenegro/keras-uncertainty.git" }
